sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:6: error: '<-' expected but ')' found.
    for (i<getValueCount()-1 to 0 by -1){
                                       ^AlgBubbleSort3:12: error: illegal start of simple expression
  } while(swapped)
  ^